finish firebase upload

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
   <title>React App</title>
 </head>
 
-<body>
+<body class="bg-gray-1000">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
@@ -40,30 +40,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  <!-- The core Firebase JS SDK is always required and must be listed first -->
-  <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
-
-  <!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-  <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-analytics.js"></script>
-
-  <script>
-    // Your web app's Firebase configuration
-    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-    var firebaseConfig = {
-      apiKey: "AIzaSyCdJY8bOitOoUj3TfoSuLi6awr32633Pb8",
-      authDomain: "brandbox-dev.firebaseapp.com",
-      databaseURL: "https://brandbox-dev.firebaseio.com",
-      projectId: "brandbox-dev",
-      storageBucket: "brandbox-dev.appspot.com",
-      messagingSenderId: "337866394560",
-      appId: "1:337866394560:web:908d3d43c084a84d46d625",
-      measurementId: "G-D4DQ386V6V"
-    };
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    firebase.analytics();
-  </script>
 </body>
 
 </html>
